tests/snapshots/pretty_print__negative_impl.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
impl !MyTrait for MyStruct {}
