tests/snapshots/pretty_print__nested_struct.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
struct Outer { inner: Inner, another_field: i32, }
