tests/snapshots/pretty_print__single_field_struct.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
struct MyStruct {
field: i32,
}
