tests/snapshots/pretty_print__struct.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
// A simple struct.
struct Foo {
    field1: i32    ,
    field2: String    ,
}
