tests/snapshots/pretty_print__trait.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
// A simple trait.
trait MyTrait { fn my_func(); }
