tests/snapshots/pretty_print__trait_impl.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
impl MyTrait for MyStruct {
    fn new() {}
}
