tests/snapshots/pretty_print__union_pretty_print.snap
---
source: tests/pretty_print.rs
expression: pretty(&ast)
---
union MyUnion {
    f1: u32,
    f2: f32,
}
