tests/snapshots/pretty_print__unsafe_trait_impl.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
unsafe impl MyTrait for MyStruct {
    fn new() {}
}
