tests/snapshots/pretty_print__while_expression.snap
---
source: tests/pretty_print.rs
expression: pretty_print_item(ast)
---
fn foo() {
    while 1 {
        2;
        
    };
    
}
